--- a/ProyectoFinalCS.csproj
+++ b/ProyectoFinalCS.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="OxyPlot.WindowsForms" Version="2.2.0" />
+    <PackageReference Include="Plotly.NET" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
